# AI-Employe

./: .env.sample  .gitignore  README.md  package.json
client/extension/: build.ts  package.json  tsconfig.json
client/extension/src/: cursor.tsx  manifest.json  recorder.ts  run.tsx  ui.html  ui.tsx  worker.ts
client/web/: components.json  next.config.js  package.json  tailwind.config.js  tsconfig.json
client/web/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx  toast.tsx  use-toast.ts
client/web/firebaseAdmin/: index.ts
client/web/lib/: axios.ts
client/web/pages/: _app.tsx  _document.tsx  index.tsx  ltdpricing.tsx  privacy.tsx
client/web/pages/api/: auth.ts  user.ts
client/web/pages/dashboard/: index.tsx  onboarding.tsx  stats.tsx  workflows.tsx
client/web/prisma/: index.ts  schema.prisma
client/web/serverLib/db/: plan.ts  user.ts
client/web/serverLib/plans/: index.ts
client/web/serverLib/utils/: stripeClient.ts  verifyToken.ts  (+1 more)
client/web/store/: index.ts  modalSlice.ts  userSlice.ts
client/web/styles/: dashboard.ts  globals.css  index.ts  onboarding.ts  pricing.ts  privacy.ts
server/: Cargo.toml  package.json  prompt.txt
server/src/: main.rs  schema.rs
server/src/api/: execute.rs  health.rs  mod.rs  user.rs  workflow.rs
server/src/common/: mod.rs  types.rs
server/src/common/db/: action.rs  execute.rs  mod.rs  plan.rs  stats.rs  task.rs  user.rs  workflow.rs
server/src/common/dom/: mod.rs  parse.rs  search.rs
server/src/common/gpt/: action.rs  mod.rs  prompts.rs  tasks.rs
server/src/utils/: config.rs  load_env.rs  mod.rs
(+82 files in other folders)
