[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
firebase-auth = { version = "0.3.1", features = ["actix-web"] }
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4"
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.192"
futures-util = "0.3.29"
serde_json = "1.0.108"
reqwest = "0.11.22"
thiserror = "1.0.50"
meilisearch-sdk = "0.24.3"
futures = "0.3"
scraper = "0.18.1"

[dependencies.simple_logger]
features = ["colors", "timestamps"]
git = "https://github.com/borntyping/rust-simple_logger"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
